# chicago-aiscience.github.io

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Gemfile  Makefile  README.md  _config.yml  _config_local.yml  astro.config.mjs  deno.json  deno.jsonc  myst.yml  notebook.ipynb  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
_data/: navigation.yml  services.yml  socialmedia.yml
_drafts/: page_all_frontmatter.md
_includes/: _footer.html  _footer_scripts.html  _frontpage-widget.html  _head.html  _masthead.html  _navigation.html  _sidebar.html
_layouts/: frontpage.html  projects.html
_projects/: Generative-BigSMILES.md  autoregressive-black-holes.md  dash.md  dtor.md  sunbird.md  (+2 more)
python/research/: README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
python/research/src/research/: __init__.py  configs.py  directives.py  domain.py  helpers.py  nodes.py
python/research/tests/: __init__.py  conftest.py  test_environment.py  test_node_writing.py  test_options.py  test_parsing.py
python/research/tests/fixtures/test-config-empty/: conf.py
python/research/tests/fixtures/test-config-simple/: conf.py
python/research/tests/fixtures/test-parsing-empty-config-bad-key/: conf.py  index.md
python/research/tests/fixtures/test-parsing-empty-config-no-key/: index.md
python/research/tests/fixtures/test-parsing-simple-config-good-key/: index.md
python/research/tests/fixtures/test-parsing-simple-config-multiple-instances/: conf.py  index.md
python/research/tests/fixtures/test-parsing-simple-config-no-key/: conf.py
(+196 files in other folders)
