[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chris", email = "cpredmond98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "docutils>=0.21.2",
    "sphinx>=8.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
include = ["assets/*"]
